--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lint": "eslint .",
-    "lint:fix": "eslint --fix .",
-    "prettier": "prettier --write src/*.js",
+    "lint:fix": "eslint --fix",
+    "prettier": "prettier --write src/*.jsx",
     "prepare": "husky install"
   },
   "eslintConfig": {
