checking the operation of plugins 2

--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "lint": "eslint .",
     "lint:fix": "eslint --fix .",
     "prettier": "prettier --write src/*.jsx",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "lint-staged": "lint-staged"
   },
   "lint-staged": {
     "*.{js, jsx}": [
