checking the operation of plugins 2

--- a/package.json
+++ b/package.json
@@ -19,14 +19,7 @@
     "lint": "eslint .",
     "lint:fix": "eslint --fix .",
     "prettier": "prettier --write src/*.jsx",
-    "prepare": "husky install",
-    "lint-staged": "lint-staged"
-  },
-  "lint-staged": {
-    "*.{js, jsx}": [
-      "prettier --write",
-      "git add"
-    ]
+    "prepare": "husky install"
   },
   "eslintConfig": {
     "extends": [
