--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -37,6 +37,8 @@
         "react/function-component-definition": "off",
         "jsx-a11y/label-has-associated-control": "off",
         "react/button-has-type": "off",
-        "spaced-comment": "off"
+        "spaced-comment": "off",
+        "no-unneeded-ternary": "off",
+        "no-unused-vars": "off"
     }
 }
