--- a/.lintstagedrc.json
+++ b/.lintstagedrc.json
@@ -1,3 +1,4 @@
 {
-  "src/**/*.{css,js,jsx,html}": "npm run prettier"
+  "src/**/*.{css,js,jsx,html}": "npm run prettier",
+  "src/**/*.{js,jsx}": "npm run lint:fix"
 }
