--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -2,5 +2,5 @@
   "arrowParens": "always",
   "singleQuote": false,
   "trailingComma": "es5",
-  "bracketSpacing": false
+  "bracketSpacing": true
 }
