--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -26,26 +26,54 @@
         "prettier"
     ],
     "rules": {
-//        "quotes": "off",
-//        "react/jsx-uses-react": ["off"],
-//        "react/react-in-jsx-scope": ["off"],
-//        "react/jsx-props-no-spreading": ["warn"],
-//        "no-shadow": "off",
-//        "prettier/prettier": ["error",{
-//            "endOfLine": "auto"}
-//        ],
-//        "react/prop-types": 0,
-//        "import/prefer-default-export": 0,
-//        "react/function-component-definition": "off",
-//        "jsx-a11y/label-has-associated-control": "off",
-//        "jsx-a11y/label-has-associated-control": [ "error", {
-//            "required": {
-//                "some": [ "nesting", "id"  ]
-//            }
-//        }],
-//        "react/button-has-type": "off",
-//        "spaced-comment": "off",
-//        "no-unneeded-ternary": "off",
-//        "no-unused-vars": "off"
+        "prettier/prettier": "error",
+        "arrow-body-style": "off",
+        "arrow-parens": ["error", "always"],
+        "object-curly-newline": "off",
+        "no-tabs": 0,
+        "indent": [2, "tab", { "SwitchCase": 1 }],
+        "comma-dangle": ["error", "never"],
+        "max-len": ["error", { "code": 120 }],
+        "jsx-quotes": ["error", "prefer-single"],
+        "implicit-arrow-linebreak": "off",
+        "operator-linebreak": [
+            "error",
+            "after",
+            {
+                "overrides": {
+                    ":": "before"
+                }
+            }
+        ],
+        "react/jsx-indent-props": "off",
+        "react/react-in-jsx-scope": "off",
+        "react/jsx-props-no-spreading": "off",
+        "react/jsx-boolean-value": "off",
+        "react/jsx-indent": ["error", "tab", { "checkAttributes": true, "indentLogicalExpressions": true }],
+        "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx", ".ts", ".tsx"] }],
+        "react/jsx-wrap-multilines": [
+            "error",
+            {
+                "declaration": "parens-new-line",
+                "assignment": "parens-new-line",
+                "return": "parens-new-line",
+                "arrow": "parens-new-line",
+                "condition": "parens-new-line",
+                "logical": "parens-new-line",
+                "prop": "parens-new-line"
+            }
+        ],
+        "prefer-arrow-callback": "off",
+        "import/prefer-default-export": "off",
+        "import/extensions": [
+            "error",
+            "ignorePackages",
+            {
+                "js": "never",
+                "jsx": "never",
+                "ts": "never",
+                "tsx": "never"
+            }
+        ]
     }
 }
