--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,82 +1,122 @@
 {
-    "env": {
-        "browser": true,
-        "es2021": true
+  "env": {
+    "browser": true,
+    "es2021": true
+  },
+  "extends": [
+    "eslint:recommended",
+    "plugin:react/recommended",
+    "plugin:react/jsx-runtime",
+    "airbnb",
+    "plugin:prettier/recommended",
+    "prettier"
+  ],
+  "overrides": [
+  ],
+  "parserOptions": {
+    "ecmaFeatures": {
+      "jsx": true
     },
-    "extends": [
-        "eslint:recommended",
-        "plugin:react/recommended",
-        "plugin:react/jsx-runtime",
-        "airbnb",
-        "plugin:prettier/recommended"
+    "parser": "@babel/eslint-parser",
+    "requireConfigFile": false,
+    "ecmaVersion": "latest",
+    "sourceType": "module"
+  },
+  "plugins": [
+    "react",
+    "prettier"
+  ],
+  "rules": {
+    "prettier/prettier": "error",
+    "arrow-body-style": "off",
+    "arrow-parens": [
+      "error",
+      "always"
     ],
-    "overrides": [
+    "object-curly-newline": "off",
+    "no-tabs": 0,
+    "indent": [
+      2,
+      "tab",
+      {
+        "SwitchCase": 1
+      }
     ],
-    "parserOptions": {
-        "ecmaFeatures": {
-            "jsx": true
-        },
-        "parser": "@babel/eslint-parser",
-        "requireConfigFile": false,
-        "ecmaVersion": "latest",
-        "sourceType": "module"
-    },
-    "plugins": [
-        "react",
-        "prettier"
+    "comma-dangle": [
+      "error",
+      "never"
     ],
-    "rules": {
-        "prettier/prettier": "error",
-        "arrow-body-style": "off",
-        "arrow-parens": ["error", "always"],
-        "object-curly-newline": "off",
-        "no-tabs": 0,
-        "indent": [2, "tab", { "SwitchCase": 1 }],
-        "comma-dangle": ["error", "never"],
-        "max-len": ["error", { "code": 120 }],
-        "jsx-quotes": ["error", "prefer-single"],
-        "implicit-arrow-linebreak": "off",
-        "operator-linebreak": [
-            "error",
-            "after",
-            {
-                "overrides": {
-                    ":": "before"
-                }
-            }
+    "max-len": [
+      "error",
+      {
+        "code": 130
+      }
+    ],
+    "jsx-quotes": [
+      "error",
+      "prefer-single"
+    ],
+    "implicit-arrow-linebreak": "off",
+    "operator-linebreak": [
+      "error",
+      "after",
+      {
+        "overrides": {
+          ":": "before"
+        }
+      }
+    ],
+    "react/jsx-indent-props": "off",
+    "react/react-in-jsx-scope": "off",
+    "react/jsx-props-no-spreading": "off",
+    "react/jsx-boolean-value": "off",
+    "react/jsx-indent": [
+      "error",
+      "tab",
+      {
+        "checkAttributes": true,
+        "indentLogicalExpressions": true
+      }
+    ],
+    "react/jsx-filename-extension": [
+      1,
+      {
+        "extensions": [
+          ".js",
+          ".jsx",
+          ".ts",
+          ".tsx"
+        ]
+      }
+    ],
+    "prefer-arrow-callback": "off",
+    "import/prefer-default-export": "off",
+    "import/extensions": [
+      "error",
+      "ignorePackages",
+      {
+        "js": "never",
+        "jsx": "never",
+        "ts": "never",
+        "tsx": "never"
+      }
+    ],
+    "react/jsx-no-constructed-context-values": "off",
+    "react/prop-types": 0,
+    "jsx-a11y/label-has-associated-control": "off",
+    "react/function-component-definition": [
+      2,
+      {
+        "namedComponents": [
+          "arrow-function",
+          "function-declaration",
+          "function-expression"
         ],
-        "react/jsx-indent-props": "off",
-        "react/react-in-jsx-scope": "off",
-        "react/jsx-props-no-spreading": "off",
-        "react/jsx-boolean-value": "off",
-        "react/jsx-indent": ["error", "tab", { "checkAttributes": true, "indentLogicalExpressions": true }],
-        "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx", ".ts", ".tsx"] }],
-        "react/jsx-wrap-multilines": [
-            "error",
-            {
-                "declaration": "parens-new-line",
-                "assignment": "parens-new-line",
-                "return": "parens-new-line",
-                "arrow": "parens-new-line",
-                "condition": "parens-new-line",
-                "logical": "parens-new-line",
-                "prop": "parens-new-line"
-            }
-        ],
-        "prefer-arrow-callback": "off",
-        "import/prefer-default-export": "off",
-        "import/extensions": [
-            "error",
-            "ignorePackages",
-            {
-                "js": "never",
-                "jsx": "never",
-                "ts": "never",
-                "tsx": "never"
-            }
-        ],
-        "react/jsx-no-constructed-context-values": "off",
-        "react/prop-types": "off",
-        "react/function-component-definition": "off"
-    }
+        "unnamedComponents": [
+          "arrow-function",
+          "function-expression"
+        ]
+      }
+    ]
+  }
 }
