--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -8,7 +8,7 @@
   "jsxBracketSameLine": false,
   "bracketSpacing": true,
   "arrowParens": "always",
-  "endOfLine": "lf",
+  "endOfLine": "auto",
   "quoteProps": "as-needed",
   "trailingComma": "none"
 }
