добавил пропс type в Button

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -57,6 +57,7 @@
         "code": 130
       }
     ],
+    "react/button-has-type": "off",
     "jsx-quotes": [
       "error",
       "prefer-single"
