--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -39,13 +39,13 @@
       "always"
     ],
     "object-curly-newline": "off",
-    "no-tabs": 0,
     "indent": [
-      2,
-      "tab",
-      {
-        "SwitchCase": 1
-      }
+      "error",
+      2
+    ],
+    "react/jsx-indent": [
+      "error",
+      2
     ],
     "comma-dangle": [
       "error",
@@ -57,6 +57,7 @@
         "code": 130
       }
     ],
+    "react/button-has-type": "off",
     "jsx-quotes": [
       "error",
       "prefer-single"
@@ -67,6 +68,7 @@
       "after",
       {
         "overrides": {
+          "?": "before",
           ":": "before"
         }
       }
@@ -75,14 +77,6 @@
     "react/react-in-jsx-scope": "off",
     "react/jsx-props-no-spreading": "off",
     "react/jsx-boolean-value": "off",
-    "react/jsx-indent": [
-      "error",
-      "tab",
-      {
-        "checkAttributes": true,
-        "indentLogicalExpressions": true
-      }
-    ],
     "react/jsx-filename-extension": [
       1,
       {
