--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -103,6 +103,8 @@
     "react/jsx-no-constructed-context-values": "off",
     "react/prop-types": 0,
     "jsx-a11y/label-has-associated-control": "off",
+    "jsx-a11y/no-static-element-interactions": "off",
+    "jsx-a11y/click-events-have-key-events": "off",
     "react/function-component-definition": [
       2,
       {
